<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:title="@string/profil"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_language"
        android:title="@string/bahasa"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/option_1"
                android:title="@string/indonesia"/>

            <item
                android:id="@+id/option_2"
                android:title="@string/inggris"/>

            <item
                android:id="@+id/option_3"
                android:title="@string/jepang"/>
            <item
                android:id="@+id/option_4"
                android:title="@string/prancis"/>
        </menu>
    </item>
</menu>
