<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/head"
        android:contentDescription="@string/logo" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:text="@string/Muhammad_Faisal"
                android:gravity="center"
                android:textSize="24sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_nim"
                android:layout_width="match_parent"
                android:text="@string/NIM"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_move_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/move_phone" />
            <Button
                android:id="@+id/btn_move_sosmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/move_app" />
            <Button
                android:id="@+id/btn_move_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/move_alamat" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>